update portfolio website

--- a/content/projects/nextjs-portfolio.mdx
+++ b/content/projects/nextjs-portfolio.mdx
@@ -1,10 +1,10 @@
 ---
-title: nextjs-portfolio
+title: portfolio website
 description: The website you're looking at
-repository: taeyeong2k/nextjs-portfolio
-url: https://taeyeong2k.com
-date: 2023-08-12
+repository: taeyeong2k/portfolio
+url: https://portfolio-taeyeongk.vercel.app
+date: 2023-05-16
 published: true
 ---
 
-Portfolio website, cloned from the template written by chronark: https://github.com/chronark/chronark.com   
+Portfolio website, based on the template written by chronark: https://github.com/chronark/chronark.com. Written using Next.js and Tailwind CSS.   
