--- a/content/projects/cachex-ai.mdx
+++ b/content/projects/cachex-ai.mdx
@@ -2,7 +2,7 @@
 title: cachex-ai
 description: implementation of the cachex game and an attempt at a machine learning and traditional AI agent.
 repository: taeyeong2k/cachex
-url: https://taeyeong2k.com
+url: https://portfolio-taeyeongk.vercel.app
 date: 2022-05-05
 published: true
 ---
