--- a/content/projects/mvs-discord.mdx
+++ b/content/projects/mvs-discord.mdx
@@ -4,8 +4,8 @@ description: Discord bot for multiversus australia server
 repository: taeyeong2k/mvsdiscord
 url: https://multiversus.au
 date: 2023-2-1
-published: false
+published: true
 ---
 
 Discord bot I had worked on to retrieve stats and game information for users 
-on my Multiversus server. 
+on my Multiversus server. Written in Javascript using the Discord.js library. 
